fix(stories): flew wrap component in preview

--- a/src/stories/styles/preview.css
+++ b/src/stories/styles/preview.css
@@ -1,5 +1,6 @@
 .iml-sb-preview {
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     width: 100%;
 }
